feat(locale): add locale khmer

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 VITE_APP_API_URL="http://localhost:5000/rest/api/"
 VITE_APP_TINY_MCE_API_KEY="your_api_key"
+VITE_APP_LNG_LOCALE=en
+VITE_APP_LNG_FALLBACK_LOCALE=en
